--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,11 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>login</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Username</ion-label>
+      <ion-input type="email" [(ngModel)]="account.email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password" [(ngModel)]="account.password"></ion-input>
+    </ion-item>
+  </ion-list>
+  <div class='divider' style="width: 100%; height: 10px"></div>
+  <button ion-button full (click)="login()">Login</button>
+  <button ion-button full (click)="signup()">Sign Up</button>
 
 </ion-content>
