--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content padding>
-<ion-list>
+  <ion-list>
     <ion-item>
       <ion-label floating>Name</ion-label>
       <ion-input type="text" [(ngModel)]="account.name"></ion-input>
@@ -25,4 +25,11 @@
       <ion-input type="password" [(ngModel)]="account.password"></ion-input>
     </ion-item>
   </ion-list>
+
+  <div padding>
+    <span style="color: red;">Password는 6자리 이상이여야 합니다.</span>
+  </div>
+
+  <div class="divider" style="width: 100%; height: 30px;"></div>
+  <button ion-button full (click)="signup()">Sign Up</button>
 </ion-content>
