feat: Add reset password

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,5 +25,6 @@
   <div class='divider' style="width: 100%; height: 30px"></div>
   <button ion-button full (click)="login()">Login</button>
   <button ion-button full (click)="signup()">Sign Up</button>
+  <button ion-button full (click)="reset()" color="secondary">Reset Email</button>
 
 </ion-content>
